--- a/NCommon.ContainerAdapters/NCommon.ContainerAdapters.Tests/packages.config
+++ b/NCommon.ContainerAdapters/NCommon.ContainerAdapters.Tests/packages.config
@@ -1,18 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
+  <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net48" />
   <package id="Autofac" version="5.2.0" targetFramework="net48" />
   <package id="Castle.Core" version="4.4.1" targetFramework="net48" />
-  <package id="Castle.Windsor" version="2.5.2" />
+  <package id="Castle.Windsor" version="5.0.1" targetFramework="net48" />
   <package id="CommonServiceLocator" version="2.0.5" targetFramework="net48" />
-  <package id="Iesi.Collections" version="3.1.0.4000" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net48" />
-  <package id="NHibernate" version="3.1.0.4000" />
-  <package id="Ninject" version="2.2.1.4" />
+  <package id="Iesi.Collections" version="4.0.4" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
+  <package id="NHibernate" version="5.2.7" targetFramework="net48" />
+  <package id="Ninject" version="3.3.4" targetFramework="net48" />
   <package id="NUnit" version="3.12.0" targetFramework="net48" />
   <package id="NUnitTestAdapter.WithFramework" version="2.0.0" targetFramework="net48" />
-  <package id="structuremap" version="2.6.2" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net48" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net48" />
-  <package id="Unity" version="2.1.505.0" />
+  <package id="Remotion.Linq" version="2.2.0" targetFramework="net48" />
+  <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net48" />
+  <package id="StructureMap" version="4.7.1" targetFramework="net48" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="Unity" version="5.11.7" targetFramework="net48" />
 </packages>
