--- a/NCommon.ContainerAdapters/NCommon.ContainerAdapter.NInject/packages.config
+++ b/NCommon.ContainerAdapters/NCommon.ContainerAdapter.NInject/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Ninject" version="2.2.1.4" />
+  <package id="Ninject" version="3.3.4" targetFramework="net48" />
 </packages>
