--- a/NCommon.ContainerAdapters/NCommon.ContainerAdapter.StructureMap/packages.config
+++ b/NCommon.ContainerAdapters/NCommon.ContainerAdapter.StructureMap/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="structuremap" version="2.6.2" />
+  <package id="StructureMap" version="4.7.1" targetFramework="net48" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net48" />
 </packages>
