--- a/NCommon.ContainerAdapters/NCommon.ContainerAdapter.Unity/packages.config
+++ b/NCommon.ContainerAdapters/NCommon.ContainerAdapter.Unity/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="2.0.5" targetFramework="net40" />
-  <package id="Unity" version="2.1.505.0" />
+  <package id="CommonServiceLocator" version="2.0.5" targetFramework="net40" requireReinstallation="true" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
+  <package id="Unity" version="5.11.7" targetFramework="net48" />
 </packages>
