--- a/NCommon.ContainerAdapters/NCommon.ContainerAdapter.CastleWindsor/packages.config
+++ b/NCommon.ContainerAdapters/NCommon.ContainerAdapter.CastleWindsor/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.4.1" targetFramework="net40" requireReinstallation="true" />
-  <package id="Castle.Windsor" version="2.5.2" requireReinstallation="true" />
+  <package id="Castle.Windsor" version="5.0.1" targetFramework="net48" />
 </packages>
